--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Monitoring::Generator::TestConfig.
 
+0.27  Sat Feb 20 20:29:17 CET 2010
+	added shinken layout
+    fixed tests for windows
+
 0.26  Fri Jan  8 11:13:16 CET 2010
 	fixed way of searching for binarys
 	fixed config test when there is no binary found
