--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Monitoring::Generator::TestConfig.
 
+0.38  Sat Apr 16 15:39:33 CEST 2011
+	updated shinken init script
+
 0.36  Sun Mar 20 12:56:50 CET 2011
 	added omd layout
 
